@@ -1,4 +1,4 @@
-log4j.rootLogger=debug, logfile
+log4j.rootLogger=info, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
